<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_task_dialog_title"
            android:text="@string/add_task_dialog_title"
            android:background="@color/colorPrimary"
            android:padding="@dimen/add_new_task_dialog_title_padding"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/new_task_container_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/task_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_add_new_task_title"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:hint="@string/task_title_hint"
                    android:maxLength="50"
                    android:padding="@dimen/input_padding" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/task_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_add_new_task_content"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:hint="@string/task_content_hint"
                    android:maxLines="300"
                    android:padding="@dimen/input_padding" />

            </android.support.design.widget.TextInputLayout>
            <Spinner
                android:id="@+id/task_tag"
                android:padding="@dimen/input_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/task_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_add_new_task_date"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:editable="false"
                    android:hint="@string/task_date_hint"
                    android:padding="@dimen/input_padding" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/task_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_add_new_task_date"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:editable="false"
                    android:hint="@string/task_time_hint"
                    android:padding="@dimen/input_padding" />

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/task_dialog_linear_margin_right"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/task_dialog_linear_margin_top"
                android:layout_marginBottom="@dimen/task_dialog_linear_margin_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cancel"
                    android:text="@string/add_task_dialog_cancel_text"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/add_new_task"
                    android:layout_marginLeft="@dimen/task_dialog_add_margin_left"
                    android:text="@string/add_task_dialog_title"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
