<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_marginLeft="@dimen/pending_card_view_margin_left"
        android:layout_marginRight="@dimen/pending_card_view_margin_right"
        android:layout_marginTop="@dimen/pending_card_view_margin_top"
        android:layout_marginBottom="@dimen/pending_card_view_margin_bottom"
        android:elevation="@dimen/pending_card_view_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/each_pending_task_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pending_task_title"
                android:text="@string/pending_task_demo_title"
                android:textSize="@dimen/pending_task_title_text_size"
                android:layout_marginLeft="@dimen/pending_task_title_left_margin"
                android:layout_marginBottom="@dimen/pending_task_title_bottom_margin"
                android:layout_marginRight="@dimen/pending_task_title_right_margin"
                android:layout_marginTop="@dimen/pending_task_title_top_margin"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/pending_task_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pending_task_title"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="@dimen/pending_task_content_right_margin"
                android:layout_marginBottom="@dimen/pending_task_content_bottom_margin"
                android:text="@string/pending_task_demo_content"
                android:textSize="@dimen/pending_task_content_text_size" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/make_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/completd_to_img_margin_right"
                    android:src="@drawable/ic_done_task" />

                <ImageView
                    android:id="@+id/option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_task_options" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/pending_task_info_section_margin_left"
                android:layout_marginRight="@dimen/pending_task_info_section_margin_right"
                android:layout_marginBottom="@dimen/pending_task_info_section_bottom_margin"
                android:layout_below="@+id/pending_task_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/task_tag"
                    android:text="@string/task_info_demo_tag_text"
                    android:textSize="@dimen/task_info_section_text_size"
                    android:layout_marginRight="@dimen/task_info_section_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/task_date"
                    android:text="@string/task_info_demo_date_text"
                    android:textSize="@dimen/task_info_section_text_size"
                    android:layout_marginRight="@dimen/task_info_section_margin_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/task_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="45sp"
                    android:text="@string/task_info_demo_time_from_text"
                    android:textSize="@dimen/task_info_section_text_size" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>